--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.15.1",
     "mongoose": "^4.8.3",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "serve-favicon": "~2.3.2"
   }
 }
